<?xml version="1.0"?>
<package>
  <name>dwl_planners</name>
  <version>0.0.0</version>
  <description>The dwl_planners package</description>

  <maintainer email="carlos.mastalli@iit.it">Carlos Mastalli</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/dwl_planners</url> -->

  <author email="carlos.mastalli@iit.it">Carlos Mastalli</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>dwl</build_depend>
  <build_depend>terrain_server</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>dwl</run_depend>
  <run_depend>terrain_server</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

</package>