<?xml version="1.0"?>
<package>
  <name>dwl</name>
  <version>0.0.1</version>
  <description>The Dynamic Whole'body Locomotion (DWL) package</description>

  <author email="carlos.mastalli@iit.it">Carlos Mastalli</author>

  <maintainer email="carlos.mastalli@iit.it">Carlos Mastalli</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

<!-- <url type="website">http://dwl.github.io</url>
  <url type="bugtracker">https://github.com/DWL/dwl/issues</url>   -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  
  <buildtool_depend>cmake</buildtool_depend>
  
<!-- <build_depend>octomap</build_depend>
  <build_depend>eigen</build_depend>   -->
  
  <run_depend>catkin</run_depend>
<!-- <run_depend>octomap</run_depend>
  <run_depend>eigen</run_depend>   -->

  
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- <build_depend>roscpp</build_depend> --> 
<!--  <build_depend>octomap_msgs</build_depend> -->
<!--  <run_depend>roscpp</run_depend> -->
<!--  <run_depend>octomap_msgs</run_depend>-->
  

  <export>
	<build_type>cmake</build_type>
  </export>
</package>